[package]
name = "PictoPy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
image = "0.24.6"
tauri-plugin-fs = { version = "2.0.0-beta", features = ["watch"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
ring = { version = "0.16.20", features = ["std"] }
data-encoding = "2.3.2"
arrayref = "0.3.6"
directories = "4.0"
chrono = { version = "0.4.26", features = ["serde"] }
argon2 = "0.5.3"

base64 = "0.21.0"
rand = { version = "0.8", features = ["std"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
