[package]
name = "picto_py"
version = "1.1.0"
description = "An Image sorter that sorts photos based on face encodings in it."
authors = ["you"]
edition = "2021"

# See more keys and their definition  s at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["protocol-asset", "devtools"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
image = "0.24.6"
ring = "0.16.20"
data-encoding = "2.3.2"
tokio = { version = "1", features = ["macros"] }
tempfile = "3"
arrayref = "0.3.6"
directories = "4.0"
chrono = { version = "0.4.26", features = ["serde"] }

base64 = "0.21.0"
rand = "0.8.5"
winapi = { version = "0.3", features = ["winuser"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.4.1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-opener = "2.5.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
